kubernetes/longhorn/helm/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-external
  name: longhorn
  namespace: longhorn-system
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - kind: Rule
    match: Host(`longhorn.techcasa.io`)
    services:
    - name: longhorn-ui
      namespace: longhorn-system
      port: 8000
  tls:
    secretName: longhorn-webhook-ca
